Fix tech stack animations on Firefox

--- a/src/styles/_expandablelist.scss
+++ b/src/styles/_expandablelist.scss
@@ -60,6 +60,7 @@
 
     &.application-layer {
         z-index: 10;
+        width: 500px;
         top: 0;
         left: 0;
         &.selected {
@@ -103,6 +104,7 @@
 
     &.renvm {
         z-index: 6;
+        width: 500px;
         left: 0;
         bottom: 0;
         &.selected {
